# rs-grpc

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  build.bash  build.rs  build.ts  grpc-api.ts  grpc-client-api.ts  grpc-client-example.ts  grpc-server.ts  package.json  proto.ts  serve.ts
proto/: hello.proto  main.proto
src/: api.ts  client.rs  index.html  index.ts  server.rs
