[package]
name = "rs-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
tonic-web = "0.12.3"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
